# scholar-bot

./: .gitignore  README.md  app.py  my-email.md  pyproject.toml
app/: app.py  sections.py
data/: COPscholars.csv  scholar_data.csv  scholars.csv
notebooks/: exploring.ipynb
src/scholar_bot/: mailer2.py  mdmailer.py  models.py  smpt_based_mailer.py  update.py  utils.py
tests/: test_scholar_bot.py
