[tool.poetry]
name = "scholar_bot"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
plotly = "^5.1.0"
pandas = "^1.3.1"
Markdown = "^3.3.4"
mdmail = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
ipython = "^7.26.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
